tests/buildstructor/fail/missing_param.stderr
error[E0599]: the method `build` exists for struct `__FooBuilder<(__Required<String>,)>`, but its trait bounds were not satisfied
   --> tests/buildstructor/fail/missing_param.rs:15:28
    |
6   | #[buildstructor]
    | ----------------
    | |
    | method `build` not found for this
    | doesn't satisfy `__Required<String>: Into<__Set<String>>`
...
15  |     let _ = Foo::builder().build();
    |                            ^^^^^ method cannot be called on `__FooBuilder<(__Required<String>,)>` due to unsatisfied trait bounds
    |
    = note: the following trait bounds were not satisfied:
            `__Required<String>: Into<__Set<String>>`
note: the following trait must be implemented
   --> $RUST/core/src/convert/mod.rs
    |
    | / pub trait Into<T>: Sized {
    | |     /// Converts this type into the (usually inferred) input type.
    | |     #[must_use]
    | |     #[stable(feature = "rust1", since = "1.0.0")]
    | |     fn into(self) -> T;
    | | }
    | |_^
